@@ -45,9 +45,11 @@
  * If there's only one file, passing a numeric argument to 'goto' will do a page jump
 # (r2077)
  * Support @ expansion of "@id" within "val" of "#!fim:var@=val" or "#!fim:@var@=val"
-# (r2075,r2077,r2090-r2091,r2093,r2096,r2100-2101)
-# * Misc fixes (e.g.: -o aa=w, poppler API, ...)
-# (r2076,r2079,r2098,r2102)
+# (2103)
+ * The expandos of the form %:VAR: will first check for i:VAR, and then for VAR (experimental)
+# (r2075,r2077,r2090-r2091,r2093,r2096,r2100-2102)
+# * Misc fixes (e.g.: -o aa=w, poppler API, configure, ...)
+# (r2076,r2079,r2098)
  * --slideshow option now accepts decimal values
 # (r2089)
 # * limited cache support for multipage files
