@@ -25,6 +25,7 @@
  * Introduce variable _lastpageindex to allow jump to last page
  * If there's only one file, passing a numeric argument to 'goto' will do a page jump
  * Support @ expansion of "@id" within "val" of "#!fim:var@=val" or "#!fim:@var@=val"
+ * The expandos of the form %:VAR: will first check for i:VAR, and then for VAR (experimental)
  * --slideshow option now accepts decimal values
  * bugfix: avoid memory leak while decoding PDF
 
